--- a/vespa/templates/api.yaml
+++ b/vespa/templates/api.yaml
@@ -48,9 +48,9 @@ spec:
         - name: VESPA_NAMESPACE
           value: "{{ .Values.namespace }}"
         - name: VESPA_QUERY_HOST
-          value: "http://vespa-query-container-0.vespa-internal.{{ .Values.namespace }}.svc.cluster.local:8080"
+          value: "http://vespa-query.{{ .Values.namespace }}.svc.cluster.local:8080"
         - name: VESPA_FEED_HOST
-          value: "http://vespa-feed-container-0.vespa-internal.{{ .Values.namespace }}.svc.cluster.local:8080"
+          value: "http://vespa-feed.{{ .Values.namespace }}.svc.cluster.local:8080"
         resources: {{- toYaml .Values.resources.api | nindent 10 }}
         volumeMounts:
           - mountPath: /code
