Vespa Ingestor API

--- a/vespa/docker/Dockerfile
+++ b/vespa/docker/Dockerfile
@@ -44,12 +44,9 @@ RUN pip install --no-cache-dir --upgrade -r /code/requirements.txt
 # Copy application code
 COPY ./api /code/api
 
-# Add /.vespa directory for Vespa CLI and set ownership for that and the code directory
-#RUN mkdir -p /.vespa && chown -R 1000:1000 /.vespa /code
-RUN chown -R 1000:1000 /code && chown 1000:1000 /
-
-# Switch to non-root user
-USER 1000:1000
+# Container will need to run as root user (0) to enable Vespa CLI to create required directories
+# These include /.vespa and /.cache, perhaps others too
+USER 0:0
 
 # Add Vespa CLI to the PATH
 ENV PATH="/usr/local/vespa/vespa-cli/bin:${PATH}"
