--- a/vespa/templates/api.yaml
+++ b/vespa/templates/api.yaml
@@ -41,9 +41,16 @@ spec:
       - name: vespa-api
         image: "{{ .Values.api.image.repository }}:{{ .Values.api.image.tag }}"
         imagePullPolicy: {{ .Values.api.image.pullPolicy }}
+        lifecycle:
+          postStart:
+            exec:
+              command:
+                - sh
+                - -c
+                - "vespa config set target http://localhost"
         ports:
         - containerPort: {{ .Values.api.containerPort }}
-        securityContext: {{- toYaml .Values.securityContext.container | nindent 10 }}
+        securityContext: {{- toYaml .Values.api.securityContext.container | nindent 10 }}
         env:
         - name: VESPA_NAMESPACE
           value: "{{ .Values.namespace }}"
