--- a/vespa/values.yaml
+++ b/vespa/values.yaml
@@ -186,7 +186,10 @@ api:
   image:
     repository: worldhistoricalgazetteer/vespa-api
     pullPolicy: IfNotPresent
-    tag: "0.0.6"
+    tag: "0.0.7"
+  securityContext:
+    container:
+      runAsUser: 0
   git:
     url: "https://github.com/WorldHistoricalGazetteer/place.git"
     sourceFolder: "vespa/repository/"
