Vespa Query API

--- a/vespa/templates/configmap-hosts-services.yaml
+++ b/vespa/templates/configmap-hosts-services.yaml
@@ -66,6 +66,7 @@ data:
         <container id="feed" version="1.0">
             <document-api/>
             <document-processing/>
+            <search/>
             <nodes>
                 {{- range $i := until (.Values.replicaCounts.feed | int) }}
                 <node hostalias="vespa-feed-container-{{ $i }}"/>
