--- a/deployment/management-pod.yaml
+++ b/deployment/management-pod.yaml
@@ -24,5 +24,5 @@ spec:
         secretName: kubeconfig
     - name: gazetteer-repo-volume
       hostPath:
-        path: /ix3/gazetteer/repo
+        path: ~/repo
         type: Directory
