--- a/deployment/templates/management-deployment.yaml
+++ b/deployment/templates/management-deployment.yaml
@@ -25,17 +25,18 @@ spec:
       containers:
       - name: helm
         image: dtzar/helm-kubectl:latest
-        command:
-          - "/bin/sh"
-          - "-c"
-          - |
-            apk add --no-cache python3 py3-pip &&
-            pip install fastapi uvicorn &&
-            export KUBECONFIG=/root/.kube/config &&
-            cd /apps/repository &&
-            chmod +x *.sh &&
-            ./load-secrets.sh &&
-            python /app/api.py
+        command: ["/bin/sh", "-c", "export KUBECONFIG=/root/.kube/config && cd /apps/repository && chmod +x *.sh && ./load-secrets.sh && sleep infinity"]
+{{/*        command:*/}}
+{{/*          - "/bin/sh"*/}}
+{{/*          - "-c"*/}}
+{{/*          - |*/}}
+{{/*            apk add --no-cache python3 py3-pip &&*/}}
+{{/*            pip install fastapi uvicorn &&*/}}
+{{/*            export KUBECONFIG=/root/.kube/config &&*/}}
+{{/*            cd /apps/repository &&*/}}
+{{/*            chmod +x *.sh &&*/}}
+{{/*            ./load-secrets.sh &&*/}}
+{{/*            python /app/api.py*/}}
         volumeMounts:
           - name: kubeconfig-volume
             mountPath: /root/.kube
