--- a/vault-secrets-operator/crds/secrets.hashicorp.com_vaultpkisecrets.yaml
+++ b/vault-secrets-operator/crds/secrets.hashicorp.com_vaultpkisecrets.yaml
@@ -316,7 +316,7 @@ spec:
                   Note: this only has an effect when generating a CA cert or signing a CA cert,
                   not when generating a CSR for an intermediate CA.
                   Should be in duration notation e.g. 120s, 2h, etc.
-                pattern: ^([0-9]+(\.[0-9]+)?(s|m|h))$
+                pattern: ^([0-9]+(\.[0-9]+)?(s|m|h|d))$
                 type: string
               uriSans:
                 description: The requested URI SANs.
