--- a/vault-secrets-operator/crds/secrets.hashicorp.com_vaultstaticsecrets.yaml
+++ b/vault-secrets-operator/crds/secrets.hashicorp.com_vaultstaticsecrets.yaml
@@ -222,7 +222,7 @@ spec:
                   not support dynamically reloading a rotated secret.
                   In that case one, or more RolloutRestartTarget(s) can be configured here. The Operator will
                   trigger a "rollout-restart" for each target whenever the Vault secret changes between reconciliation events.
-                  All configured targets wil be ignored if HMACSecretData is set to false.
+                  All configured targets will be ignored if HMACSecretData is set to false.
                   See RolloutRestartTarget for more details.
                 items:
                   description: |-
