--- a/deployment/templates/hcp-credentials-secret.yaml
+++ b/deployment/templates/hcp-credentials-secret.yaml
@@ -5,5 +5,5 @@ metadata:
   namespace: management
 type: Opaque
 stringData:
-  HCP_CLIENT_ID: "" # Will be replaced by script
-  HCP_CLIENT_SECRET: "" # Will be replaced by script
+  HCP_CLIENT_ID: "{{ .Values.hcpClientId }}"
+  HCP_CLIENT_SECRET: "{{ .Values.hcpClientSecret }}"
