--- a/deployment/templates/management-deployment.yaml
+++ b/deployment/templates/management-deployment.yaml
@@ -25,8 +25,8 @@ spec:
       containers:
       - name: helm
         image: dtzar/helm-kubectl:latest
-        command: ["/bin/sh", "-c", "export KUBECONFIG=/root/.kube/config && cd /apps/repository && chmod +x *.sh && ./remove-secrets.sh && ./load-secrets.sh && sleep infinity"]
-{{/*        command: ["/bin/sh", "-c", "export KUBECONFIG=/root/.kube/config && cd /apps/repository && chmod +x *.sh && sleep infinity"]*/}}
+{{/*        command: ["/bin/sh", "-c", "export KUBECONFIG=/root/.kube/config && cd /apps/repository && chmod +x *.sh && ./remove-secrets.sh && ./load-secrets.sh && sleep infinity"]*/}}
+        command: ["/bin/sh", "-c", "export KUBECONFIG=/root/.kube/config && cd /apps/repository && chmod +x *.sh && sleep infinity"]
 {{/*        command:*/}}
 {{/*          - "/bin/sh"*/}}
 {{/*          - "-c"*/}}
