--- a/deployment/templates/management-deployment.yaml
+++ b/deployment/templates/management-deployment.yaml
@@ -16,21 +16,14 @@ spec:
         app: gazetteer-management
     spec:
       initContainers:
-      - name: git-clone
-        image: alpine/git:latest
-        command: ["git", "clone", "https://github.com/WorldHistoricalGazetteer/place", "/apps/repository"]
-        volumeMounts:
-          - name: empty-dir-volume
-            mountPath: /apps/repository
-      containers:
-      - name: helm
-        image: dtzar/helm-kubectl:latest
-{{/*        command: ["/bin/sh", "-c", "export KUBECONFIG=/root/.kube/config && cd /apps/repository && chmod +x *.sh && ./remove-secrets.sh && ./load-secrets.sh && sleep infinity"]*/}}
-{{/*        command: ["/bin/sh", "-c", "export KUBECONFIG=/root/.kube/config && cd /apps/repository && chmod +x *.sh && sleep infinity"]*/}}
+      - name: setup
+        image: {{ .Values.image.repository }}:{{ .Values.image.tag }}
+        imagePullPolicy: {{ .Values.image.pullPolicy }}
         command:
           - "/bin/sh"
           - "-c"
           - |
+            git clone https://github.com/WorldHistoricalGazetteer/place /apps/repository &&
             export KUBECONFIG=/root/.kube/config &&
             cd /apps/repository &&
             chmod +x *.sh &&
@@ -44,18 +37,25 @@ spec:
               echo "load-secrets.sh failed"
               exit 1
             fi &&
-            sleep infinity
-{{/*        command:*/}}
-{{/*          - "/bin/sh"*/}}
-{{/*          - "-c"*/}}
-{{/*          - |*/}}
-{{/*            apk add --no-cache python3 py3-pip &&*/}}
-{{/*            pip install fastapi uvicorn &&*/}}
-{{/*            export KUBECONFIG=/root/.kube/config &&*/}}
-{{/*            cd /apps/repository &&*/}}
-{{/*            chmod +x *.sh &&*/}}
-{{/*            ./load-secrets.sh &&*/}}
-{{/*            python /app/api.py*/}}
+        volumeMounts:
+          - name: kubeconfig-volume
+            mountPath: /root/.kube
+          - name: empty-dir-volume
+            mountPath: /apps/repository
+        envFrom:
+          - secretRef:
+              name: hcp-credentials
+      containers:
+      - name: helm
+        image: {{ .Values.image.repository }}:{{ .Values.image.tag }}
+        imagePullPolicy: {{ .Values.image.pullPolicy }}
+        command:
+          - "/bin/sh"
+          - "-c"
+          - |
+            export KUBECONFIG=/root/.kube/config &&
+            cd /apps/repository/deployment/app &&
+            python api.py
         volumeMounts:
           - name: kubeconfig-volume
             mountPath: /root/.kube
@@ -70,4 +70,4 @@ spec:
           secretName: kubeconfig
       - name: empty-dir-volume
         emptyDir:
-          sizeLimit: 1Gi
+          sizeLimit: {{ .Values.sizeLimit }}
