--- a/deployment/docker/requirements.txt
+++ b/deployment/docker/requirements.txt
@@ -1,2 +1,7 @@
 fastapi[standard]>=0.113.0,<0.114.0
 uvicorn>=0.34.0
+pydantic>=2.7.0,<3.0.0
+ijson>=3.2,<4.0
+kubernetes>=26.1.0,<27.0.0
+httpx>=0.24.0,<0.25.0
+requests>=2.31.0,<3.0.0
