--- a/deployment/templates/management-deployment.yaml
+++ b/deployment/templates/management-deployment.yaml
@@ -29,7 +29,7 @@ spec:
             - "/bin/sh"
             - "-c"
             - |
-              apk add --no-cache python3 py3-pip &&
+              apk add --no-cache python3 py3-pip rsync &&
               python3 -m venv /venv &&
               . /venv/bin/activate &&
               pip install fastapi uvicorn &&
