--- a/deployment/templates/management-deployment.yaml
+++ b/deployment/templates/management-deployment.yaml
@@ -46,6 +46,8 @@ spec:
               mountPath: /root/.kube
             - name: empty-dir-volume
               mountPath: /apps/repository
+            - name: ix1-whcdh-volume
+              mountPath: /ix1/whcdh
           envFrom:
             - secretRef:
                 name: hcp-credentials
@@ -56,3 +58,6 @@ spec:
         - name: empty-dir-volume
           emptyDir:
             sizeLimit: 1Gi
+        - name: ix1-whcdh-volume
+          persistentVolumeClaim:
+            claimName: ix1-whcdh-pvc
