--- a/deployment/templates/management-deployment.yaml
+++ b/deployment/templates/management-deployment.yaml
@@ -61,6 +61,6 @@ spec:
         - name: empty-dir-volume
           emptyDir:
             sizeLimit: 1Gi
-        - name: ix1-whcdh-volume
-          persistentVolumeClaim:
-            claimName: ix1-whcdh-pvc
+{{/*        - name: ix1-whcdh-volume*/}}
+{{/*          persistentVolumeClaim:*/}}
+{{/*            claimName: ix1-whcdh-pvc*/}}
