--- a/deployment/templates/deployment-pv-pvc.yaml
+++ b/deployment/templates/deployment-pv-pvc.yaml
@@ -15,8 +15,8 @@ spec:
     readOnly: false
   mountOptions:
     - nfsvers=4.2
-    - uid=1001  # UID of the 'gazetteer' user
-    - gid=1001  # GID of the 'gazetteer' user
+{{/*    - uid=1001  # UID of the 'gazetteer' user*/}}
+{{/*    - gid=1001  # GID of the 'gazetteer' user*/}}
 ---
 apiVersion: v1
 kind: PersistentVolumeClaim
