--- a/deployment/templates/management-deployment.yaml
+++ b/deployment/templates/management-deployment.yaml
@@ -62,8 +62,5 @@ spec:
           emptyDir:
             sizeLimit: 1Gi
         - name: ix1-whcdh-volume
-{{/*          persistentVolumeClaim:*/}}
-{{/*            claimName: ix1-whcdh-pvc*/}}
-          hostPath:
-            path: /ix1/whcdh
-            type: Directory
+          persistentVolumeClaim:
+            claimName: ix1-whcdh-pvc
