--- a/deployment/templates/management-deployment.yaml
+++ b/deployment/templates/management-deployment.yaml
@@ -15,6 +15,8 @@ spec:
       labels:
         app: gazetteer-management
     spec:
+      securityContext:
+        fsGroup: {{ .Values.securityContext.fsGroup | default 53644 }}
       initContainers:
         - name: git-clone
           image: alpine/git:latest
@@ -36,7 +38,7 @@ spec:
               export KUBECONFIG=/root/.kube/config &&
               cd /apps/repository &&
               chmod +x *.sh &&
-              ./load-secrets.sh &&
+              ./deployment/load-secrets.sh &&
               ls -la &&
               python ./deployment/app/api.py
           ports:
