--- a/deployment/values.yaml
+++ b/deployment/values.yaml
@@ -10,9 +10,10 @@ containerPort: 8000
 
 service:
   port: 8000
-  nodePort: 30000
+  nodePort: 30080
 
 securityContext:
+  fsGroup: 53644
   runAsUser: 1001
   runAsGroup: 1001
 
