--- a/deployment/values.yaml
+++ b/deployment/values.yaml
@@ -13,9 +13,9 @@ service:
   nodePort: 30080
 
 securityContext:
-  fsGroup: 53644
+#  fsGroup: 53644
   runAsUser: 53644 #1001
-  runAsGroup: 53644 #1001
+  runAsGroup: 1001
 
 sizeLimit: 1Gi
 
