--- a/deployment/templates/management-deployment.yaml
+++ b/deployment/templates/management-deployment.yaml
@@ -32,16 +32,21 @@ spec:
             - "-c"
             - |
               ls -la /ix1/whcdh &&
-              apk add --no-cache python3 py3-pip rsync &&
-              python3 -m venv /venv &&
-              . /venv/bin/activate &&
-              pip install fastapi uvicorn &&
-              export KUBECONFIG=/root/.kube/config &&
-              cd /apps/repository &&
-              chmod +x *.sh &&
-              ./deployment/load-secrets.sh &&
-              ls -la &&
-              python ./deployment/app/api.py
+              ls -la /bin /usr/bin /usr/local/bin &&
+              which python3 || which python &&
+              which pip3 || which pip &&
+              helm version &&
+              kubectl version --client
+{{/*              apk add --no-cache python3 py3-pip rsync &&*/}}
+{{/*              python3 -m venv /venv &&*/}}
+{{/*              . /venv/bin/activate &&*/}}
+{{/*              pip install fastapi uvicorn &&*/}}
+{{/*              export KUBECONFIG=/root/.kube/config &&*/}}
+{{/*              cd /apps/repository &&*/}}
+{{/*              chmod +x *.sh &&*/}}
+{{/*              ./deployment/load-secrets.sh &&*/}}
+{{/*              ls -la &&*/}}
+{{/*              python ./deployment/app/api.py*/}}
           ports:
             - containerPort: 8000
           securityContext:
